編集しました

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Enter file in which to save the key (/Users/takuyanagahiro/.ssh/id_rsa): 
+#github について
+
+
+1. 共同制作中のリモートリポジトリにプッシュした時、最新情報と違う場合のアクション
+→干渉していなければお互いの修正をリモートリポジトリに反映したい
+→干渉している場合はどうしたら良いか
+
+2. 共同制作中のリモートリポジトリの最新情報をローカルに反映させるには
+→その場合、反映が適用される範囲は？
+
+3. 現状のプッシュ方法は最適な方法か？
+
+4.基本の流れは？
+→リモートリポジトリのメインにそのままプッシュして良いのか？
+→コメントのルールなどがあれば知りたい
